[package]
name = "psh-rs"
version = "0.1.7"
edition = "2021"
description = "CLI client for sending Apple Push Notifications"
license = "MIT"
repository = "https://github.com/nakajima/psh"
keywords = ["apns", "push-notifications", "apple", "ios", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "psh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
